--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve index.html",
-    "build": "parcel build index.html --public-url .",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build index.html --public-url ."
   },
   "keywords": [],
   "author": "",
@@ -16,6 +15,5 @@
     "parcel": "^2.15.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
-  },
-  "homepage": "https://2025-ssafyAI-team06.github.io/ssafyAI-team06-frontend/"
+  }
 }
